syntax = "proto3";

package example;

option go_package = "github.com/blackhorseya/golang-101/simple-grpc/pb";

message User {
  string id = 1;
  string name = 2;
  string email = 3;
}

service UserService {
  rpc GetUser(UserIdRequest) returns (User);
}

message UserIdRequest {
  string id = 1;
}
